--- a/.github/workflows/ci_pr.yaml
+++ b/.github/workflows/ci_pr.yaml
@@ -12,10 +12,10 @@ jobs:
         with:
           go-version: 1.19
 
-      - name: Checkout code into workspace directory
+      - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Install all Go dependencies
+      - name: Run vendor
         run: go mod vendor
 
       - name: Build
@@ -36,7 +36,7 @@ jobs:
         with:
           go-version: 1.19
 
-      - name: Checkout code into workspace directory
+      - name: Checkout code
         uses: actions/checkout@v3
 
       - name: Lint code
