--- a/.github/workflows/ci_pr.yaml
+++ b/.github/workflows/ci_pr.yaml
@@ -5,7 +5,10 @@ on: [ pull_request ]
 jobs:
   Test:
     name: Test
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ ubuntu-latest, macos-latest, windows-latest ]
+    runs-on: ${{ matrix.os }}
     steps:
       - name: Set up Go 1.19
         uses: actions/setup-go@v1
@@ -30,7 +33,10 @@ jobs:
 
   Linter:
     name: Linter
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ ubuntu-latest, macos-latest, windows-latest ]
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/setup-go@v3
         with:
